# zxcalc

./: CMakeLists.txt  LICENSE  README.md  zxcalc_config.h.in
cmake/: FindLibedit.cmake
src/: CMakeLists.txt  cpm.cxx  cpm.hpp  main.cxx  str.cxx  str.hpp  zxmath.c  zxmath.h
src/plugins/: base2.c  dB.c  explog.c  fact.c  gamma.c  hour.c  invaperc.c  invnperc.c  invpperc.c  min.c  percent.c  plg_common.h  raw.c  sec.c  timings.c
