set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fno-plt -fno-exceptions -fno-unwind-tables -Wno-incompatible-pointer-types")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-plt -fno-rtti")
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -rdynamic")

include_directories("${CMAKE_CURRENT_SOURCE_DIR}")
if(LIBEDIT_FOUND)
  include_directories(${LIBEDIT_INCLUDE_DIR})
endif()
file(GLOB_RECURSE PLGS_SRCS plugins/*.c)
add_executable(zxcalc cpm.cxx main.cxx str.cxx zxmath.c ${PLGS_SRCS})

target_link_libraries(zxcalc ${CMAKE_DL_LIBS})
if(NEED_LINKING_AGAINST_LIBM)
  target_link_libraries(zxcalc m)
endif()
if(LIBEDIT_FOUND)
  target_link_libraries(zxcalc ${LIBEDIT_LIBRARIES} ${CURSES_LIBRARIES})
endif()

install(TARGETS zxcalc DESTINATION "${INSTALL_BIN_DIR}")
